@@ -1,14 +1,21 @@
 {
-  "timestamp" : "2022-11-10T02:14:18Z",
+  "timestamp" : "2022-11-15T08:31:48Z",
   "count_outdated" : 42,
   "uniques_outdated" : 14,
-  "count" : 45,
-  "uniques" : 15,
+  "count" : 46,
+  "uniques" : 16,
   "views" : [
     {
       "timestamp": "2022-11-09T00:00:00Z",
       "count": 3,
       "count_minmax": [ 3, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
