@@ -1,3 +1,11 @@
+2022-11-15T08:31:48Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3468724899 # 1030
+* notice: last 14d: unq all: 2 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 14 42 / 15 45
+* notice: next accum: outdated-unq outdated-all / unq all: 14 42 / 16 46
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-15]
+
 2022-11-10T02:14:18Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3433434108 # 1014
 * notice: last 14d: unq all: 1 3
